# qvac-fabric-llm.cpp

./: CMakeLists.txt  CMakePresets.json  README.md  convert_hf_to_gguf.py  merging_strategy.md  pyrightconfig.json
.github/: CODEOWNERS
.github/workflows/: approval-check-worker.yml  build-cmake-pkg.yml  build-linux-cross.yml  build-riscv-native.yml  build.yml  release.yml
ci/: run.sh
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  load-into-memory.cpp  load-into-memory.h  log.cpp  log.h
examples/: CMakeLists.txt
examples/embedding/: embedding.cpp
examples/gen-tunable/: CMakeLists.txt  README.md  gen-tunable.cpp
examples/llama.swiftui/llama.swiftui/Bridging/: FinetuneBridge.mm
examples/llama.swiftui/llama.swiftui/Models/: LlamaState.swift
examples/simple/: CMakeLists.txt  simple.cpp
examples/simple/vulkan_patch_poc/: .gitignore
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/: CMakeLists.txt  README.md
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/: server.h
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/client_unix/: client_unix.c
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/client_windows/: client_windows.c
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/server_unix/include/: abstract_ipc_server_socket_unix.h
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/server_windows/include/: abstract_ipc_server_socket_windows.h
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/include/: AbstractIpcClientArray.hpp
examples/simple/vulkan_patch_poc/qvac_lib_abstract_ipc/src/: AbstractIpcClientArray.cpp
examples/training/: README.md  finetune-lora.cpp  finetune.cpp
ggml/: CMakeLists.txt
ggml/cmake/: ggml-config.cmake.in
ggml/include/: ggml-backend.h  ggml-binary-stream-buffer.h  ggml-opt.h  ggml.h  gguf.h  uint8-buff-stream.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-binary-stream-buffer.cpp  ggml-opt.cpp  ggml.c  gguf.cpp  uint8-buff-stream.cpp
ggml/src/ggml-cpu/: arch-fallback.h  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  quants.c  vec.h
ggml/src/ggml-cpu/arch/x86/: quants.c
ggml/src/ggml-cuda/: ggml-cuda.cu  out-prod.cu
ggml/src/ggml-metal/: ggml-metal-context.m  ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.cpp  ggml-metal.m  ggml-metal.metal
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: count_equal_masked.comp  cross_entropy_loss_back.comp  cross_entropy_loss_masked_back.comp  dequant_funcs.comp  dequant_funcs.glsl  dequant_funcs_cm2.comp  dequant_funcs_cm2.glsl  dequant_tq2_0.comp  flash_attn_base.comp  geglu_back.comp  mul_mat_vec.comp  mul_mat_vec_base.comp  mul_mat_vec_q4_k.comp  mul_mat_vec_q6_k.comp  mul_mat_vec_tq1_0.comp  mul_mat_vec_tq1_0_q.comp  mul_mat_vec_tq2_0.comp  mul_mat_vec_tq2_0_q.comp  mul_mat_vecq.comp  mul_mat_vecq_funcs.glsl  mul_mm.comp  mul_mm_funcs.glsl  mul_mmq.comp  mul_mmq_funcs.comp  mul_mmq_funcs.glsl  out_prod.comp  out_prod_q4_0.comp  out_prod_q8_0.comp  out_prod_tq1_0.comp  out_prod_tq2_0.comp  quantize_q8_1.comp  types.comp  types.glsl  vulkan-shaders-gen.cpp
ggml/src/ggml-vulkan/vulkan_patch_poc/: CMakeLists.txt  README.md  compute_complex.comp  compute_complex.spv  compute_complex_stats.txt  simple_compute_example.cpp
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/: CMakeLists.txt  client.h
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/client_unix/include/: abstract_ipc_client_socket_unix.h  client_unix.h
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/client_windows/include/: abstract_ipc_client_socket_windows.h  client_windows.h
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/server_unix/: server_unix.c
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/server_unix/include/: server_unix.h
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/server_windows/: server_windows.c
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/abstract_ipc_clib/server_windows/include/: server_windows.h
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/include/: AbstractIpcClient.hpp
ggml/src/ggml-vulkan/vulkan_patch_poc/qvac_lib_abstract_ipc/src/: AbstractIpcClient.cpp
ggml/src/ggml-vulkan/vulkan_patch_poc/vulkan_hooks/: CMakeLists.txt  gpu_device_tracker.cpp  gpu_info_server.cpp  gpu_memory_tracker.cpp  init_vulkan_hooks_linux.cpp  init_vulkan_hooks_windows.cpp  vk_patch.cpp
ggml/src/ggml-vulkan/vulkan_patch_poc/vulkan_hooks/include/: gpu_device_tracker.h  gpu_info_server.hpp  gpu_memory_tracker.h  vk_patch.h
gguf-py/gguf/: tensor_mapping.py
include/: llama-cpp.h  llama.h
scripts/tune/: tune_quality_swag.py
src/: CMakeLists.txt  llama-adapter.cpp  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-impl.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-lora-training.cpp  llama-lora-training.h  llama-mmap.cpp  llama-mmap.h  llama-model-load-input.cpp  llama-model-load-input.h  llama-model-load.cpp  llama-model-load.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-quant.cpp  llama.cpp
tests/: .test-backend-ops.cpp.swp  CMakeLists.txt  test-backend-ops.cpp  test-gguf.cpp  test-model-load-disk.cpp  test-model-load-memory-split.cpp  test-model-load-memory.cpp
tools/: CMakeLists.txt
tools/gguf-split/: gguf-split.cpp
tools/main/: main.cpp
tools/mtmd/: CMakeLists.txt  clip-impl.h  clip.cpp  clip.h  mtmd.cpp  mtmd.h
tools/quantize/: quantize.cpp
tools/server/tests/unit/: test_ctx_shift.py
